Promise实例状态的改变与结果的保存（PromiseStat/PromiseResult属性）

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
   <script>
     // 创建Promise对象
     const p = new Promise((resolve, reject) => {
-      resolve("OK")
+      // 成功
+      // resolve("OK")
+      // 失败
+      reject("err")
     })
 
     console.log(p)
