抛出异常的处理

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
       // 成功
       // resolve("OK")
       // 失败
-      reject("err")
+      // reject("err")
+      // 抛出异常
+      throw "ERROR"
     })
 
     console.log(p)
