--- a/index.html
+++ b/index.html
@@ -12,26 +12,22 @@
   <script>
     // 创建Promise对象
     const p = new Promise((resolve, reject) => {
-      resolve("ok")
-      // reject("err")
-      // throw "ERR"
+      setTimeout(() => {
+        // resolve("ok")
+        reject("ERR")
+      }, 1000)
     })
 
     // 处理结果
     const res = p.then(res => {
       console.log(res)
-      // return "哈哈"
       return new Promise((resolve, reject) => {
-        // resolve('success')
-        reject("ERROR")
+        resolve('success')
+        // reject("ERROR")
         // throw "throw a error"
       })
     }, err => {
       console.log(err)
-      return new Promise((resolve, reject) => {
-        resolve("hahh ")
-        // throw "aaa"
-      })
     })
 
     console.log(res)
