封装函数，处理成功和失败的逻辑(公共代码的抽取)

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     // 创建Promise对象
     const p = new Promise((resolve, reject) => {
       setTimeout(() => {
-        // resolve("ok")
-        reject("ERR")
+        resolve("ok")
+        // reject("ERR")
       }, 1000)
     })
 
