--- a/index.html
+++ b/index.html
@@ -12,22 +12,14 @@
 
 <body>
   <script>
-    // 创建Promise对象
-    const p = new Promise((resolve, reject) => {
-      resolve("OK")
-      // reject("ERR")
-      // throw "Err"
-    })
-
-    // 值传递
-    p.then().then(res => {
-      console.log(res)
-    }).then(res => {
-      console.log(333)
-    }).catch(err => {
-      console.log(err)
-    })
-
+    const p = Promise.resolve("OK")
+    console.log(p)
+    const p2 = Promise.resolve(new Promise((resolve, reject) => {
+      resolve("success")
+    }))
+    console.log(p2)
+    const p3 = Promise.resolve(Promise.resolve("Success"))
+    console.log(p3)
   </script>
 </body>
 
